--- a/src/apps/dashboard-projects/ProjectsHome.css
+++ b/src/apps/dashboard-projects/ProjectsHome.css
@@ -1,13 +1,23 @@
 .dashboard-projects-home {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  height: 100%;
+}
+
+.dashboard-projects-home > .dashboard-projects-container {
+  display: flex;
+  height: 100%;
+}
+
+.dashboard-projects-home > .dashboard-projects-container > .dashboard-projects-content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .dashboard-projects-empty {
   align-items: center;
   display: flex;
-  height: 100%;
   justify-content: center;
   padding: 30px;
   text-align: center;
@@ -83,5 +93,5 @@
   gap: 1rem;
   grid-auto-rows: 1fr;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  padding: 30px 0 40px 0;
+  padding: 0px 0 40px 0;
 }
