--- a/src/themes/default/button/primary.css
+++ b/src/themes/default/button/primary.css
@@ -2,20 +2,21 @@ button.primary,
 a[href].button.primary {
   background-color: var(--button-primary-background);
   border-color: var(--button-primary-background);
-  box-shadow:
-    inset 0 0 0 150px rgba(0, 0, 0, 0),
+  box-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0),
     0 3px 4px -2px rgba(0, 0, 0, 0.3);
   color: #fff;
+  height: 38px;
+  padding: 10px 12px 10px 12px !important;
 }
 
-button.primary:not(:disabled):hover, a[href].button.primary:hover {
-  box-shadow:
-    inset 0 0 0 150px rgba(0, 0, 0, 0.18),
-    0 0 3px 1px rgba(0, 0, 0, 0.12), 
-    0 4px 12px -6px rgba(0, 0, 0, 0.25);
+button.primary:not(:disabled):hover,
+a[href].button.primary:hover {
+  box-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0.18),
+    0 0 3px 1px rgba(0, 0, 0, 0.12), 0 4px 12px -6px rgba(0, 0, 0, 0.25);
 }
 
-button.primary:not(:disabled).flat:hover, a[href].button.primary.flat:hover {
+button.primary:not(:disabled).flat:hover,
+a[href].button.primary.flat:hover {
   box-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0.18);
 }
 
