--- a/src/apps/project-settings/ProjectSettings.css
+++ b/src/apps/project-settings/ProjectSettings.css
@@ -314,11 +314,12 @@
   flex-direction: row;
   border-radius: 14px;
   padding: 0 16px 0 16px;
-  width: 70px;
+  width: 100px;
   height: 28px;
   align-items: center;
   justify-content: space-around;
   gap: 6px;
+  box-sizing: border-box;
 }
 
 .project-status-active {
@@ -330,7 +331,9 @@
   width: 70px;
   height: 28px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 4px;
+  box-sizing: border-box;
 }
 
 .project-settings-documents-view {
