--- a/src/apps/project-home/AssignmentsView/AssignmentDetail/AssignmentDetail.css
+++ b/src/apps/project-home/AssignmentsView/AssignmentDetail/AssignmentDetail.css
@@ -42,7 +42,7 @@
   font-size: 14px;
   font-weight: 600;
   margin-left: 10px;
-  width: 300px;
+  width: 25%;
 }
 
 .assignment-detail-team-list {
