--- a/src/components/CreateProjectDialog/CreateProjectDialog.css
+++ b/src/components/CreateProjectDialog/CreateProjectDialog.css
@@ -80,24 +80,32 @@
 .create-project-switches {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+}
+
+.create-project-switches.lower {
+  margin-top: 15px;
 }
 
 .create-project-visibility {
-  margin-top: 15px;
+  margin-top: 30px;
 }
 
 .create-project-radio-group-root {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 15px;
+}
+
+.create-project-radio-group-root.lower {
+  margin-top: 10px;
 }
 
 .create-project-radio-group-item {
   align-items: center;
   display: flex;
   gap: 0.25rem;
-} 
+}
 
 .create-project-radio-group-button {
   background-color: white;
