--- a/src/apps/project-home/AssignmentsView/AssignmentsList/AssignmentsList.css
+++ b/src/apps/project-home/AssignmentsView/AssignmentsList/AssignmentsList.css
@@ -5,7 +5,7 @@
 .assignments-list-item {
   box-sizing: border-box;
   width: 390px;
-  height: 80px;
+  height: 100px;
   border-top: 1px solid var(--gray-200);
   padding: 20px;
   cursor: pointer;
@@ -38,4 +38,8 @@
 .assignments-list-item-title {
   font-size: 16px;
   font-weight: 600;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
 }
