--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -1,3 +1,4 @@
+@import '@radix-ui/themes/styles.css';
 @import './annotation/index.css';
 @import './avatar/index.css';
 @import './badge/index.css';
