--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -5,6 +5,7 @@ import { getMyProfile, listMyInvites } from '@backend/crud';
 import { ProjectsHome } from '@apps/dashboard-projects';
 import { listMyProjectsExtended } from '@backend/helpers';
 import BaseLayout from '@layouts/BaseLayout.astro';
+import { CheckRedirect } from '@components/CheckRedirect';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -30,6 +31,7 @@ if (!projects.data || !invitations.data) {
 ---
 
 <BaseLayout title='Dashboard'>
+  <CheckRedirect client:only='react' />
   <ProjectsHome
     client:only='react'
     me={me.data}
