--- a/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
+++ b/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
@@ -2,6 +2,7 @@
   flex-grow: 0;   
   flex-shrink: 0; 
   flex-basis: 0;
+  overflow-x: hidden;
   position: relative;
   scroll-padding: 40px;
   z-index: 9;
@@ -11,5 +12,5 @@
   position: absolute;
   top: 5px;
   left: 0;
-  width: 240px;
+  width: 280px;
 }
