--- a/src/components/Annotation/TagList.css
+++ b/src/components/Annotation/TagList.css
@@ -9,6 +9,10 @@
   padding: 0 0 10px 0; 
 }
 
+.annotation .taglist button {
+  height: auto;
+}
+
 .annotation .taglist.editable {
   padding-bottom: 0;
 }
