Rebase feature-galleries (#344)
* Dependency updates

* Updated PDF annotator + PDFjs to latest version

* WIP

* Addresses issue https://github.com/performant-software/vico/issues/349

* Addresses https://github.com/performant-software/vico/issues/326

* Updates to latest Annotorious/Text-/PDF-Annotator dependencies, addresses https://github.com/performant-software/vico/issues/350

* Correct host in reset

* Logging

* Get session

* Removed code

* Updated annotorious-supabase package, issue https://github.com/performant-software/vico/issues/351

* WIP

* WIP

* WIP

* Fix for password reset

* Remove logging

* WIP

* WIP

* Fix

* Updates to collaboration screen

* Fix for overflowing assignment title

* Added DE label

* First pass: modified TEI serialization

* Rendering embedded TEI annotations: changed selector to new standOff location

* Fixed insert position for multiple standOff blocks

* Added @type='recogito_studio_annotations' to TEI standOff export

* Serializing Notes as TEI annotations without a target

* Preparatory plumbing for (future) re-generation of embedded notes

* package.json

* Cleanup

* PR comment resolution

* Added support for displaying 'embedded notes' from TEI markup

* Added error logging

* Updated to bugfixed Annotorious Supabase plugin

* v1.2.0

* Fix for delete assignment

* More aggressive download filename sanitization

* package.json version number

* Email template for self hosting

* Fixing duplicate notes + JS exception when sorting embedded notes

* Extra safety net for AnnotationCardSection

* Minor regression fix

* More robust handling for IIIF image info.json URLs

* Keycloak fix

* more logging

* Update callback

* remove logging

* logging

* SSO redirect

* Logging

* Fix for redirect

* Another fix

* redirect

* redirect

* Remove some logging

* Fix for SSO and Keycloak redirects

* Fix for Keycloa

--- a/src/components/CreateProjectDialog/CreateProjectDialog.css
+++ b/src/components/CreateProjectDialog/CreateProjectDialog.css
@@ -80,10 +80,9 @@
 .create-project-switches {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
 }
 
-.create-project-visibility {
+.create-project-subgroup {
   margin-top: 15px;
 }
 
@@ -91,13 +90,18 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 15px;
+}
+
+.create-project-radio-group-root.lower {
+  margin-top: 10px;
 }
 
 .create-project-radio-group-item {
-  align-items: center;
   display: flex;
+  flex-direction: row;
   gap: 0.25rem;
-} 
+}
 
 .create-project-radio-group-button {
   background-color: white;
@@ -139,5 +143,15 @@
 }
 
 .create-project-radio-group-helper {
-  margin-left: 25px;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+.create-project-container {
+  padding: 32px;
+}
+
+.create-project-label-container {
+  display: flex;
+  flex-direction: column;
 }
