--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -6,6 +6,7 @@ import { getMyProfile, listMyInvites } from '@backend/crud';
 import { ProjectsHomeWrapper } from '@apps/dashboard-projects';
 import { listMyProjectsExtended } from '@backend/helpers';
 import BaseLayout from '@layouts/BaseLayout.astro';
+import { CheckRedirect } from '@components/CheckRedirect';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -13,6 +14,7 @@ const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 
 const me = await getMyProfile(supabase);
 if (me.error || !me.data) {
+  console.log('Me: ', me);
   return Astro.redirect(`/${lang}/sign-in?redirect-to=${Astro.url}`);
 }
 
@@ -28,6 +30,7 @@ if (!projects.data || !invitations.data) {
 ---
 
 <BaseLayout title='Dashboard'>
+  <CheckRedirect client:only='react' />
   <ProjectsHomeWrapper
     client:only='react'
     me={me.data}
