--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -1,8 +1,9 @@
 ---
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
+import { TagContextProvider } from '@components/TagContext';
 import { getLangFromUrl, getTranslations } from '@i18n';
 import { getMyProfile, listMyInvites } from '@backend/crud';
-import { ProjectsHome } from '@apps/dashboard-projects';
+import { ProjectsHomeWrapper } from '@apps/dashboard-projects';
 import { listMyProjectsExtended } from '@backend/helpers';
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { CheckRedirect } from '@components/CheckRedirect';
@@ -26,13 +27,11 @@ if (!projects.data || !invitations.data) {
   const error = await fetch(`${path}/500`);
   return new Response(error.body, { headers: error.headers, status: 500 });
 }
-
-//console.log(projects.data);
 ---
 
 <BaseLayout title='Dashboard'>
   <CheckRedirect client:only='react' />
-  <ProjectsHome
+  <ProjectsHomeWrapper
     client:only='react'
     me={me.data}
     projects={projects.data}
