--- a/src/themes/default/button/index.css
+++ b/src/themes/default/button/index.css
@@ -121,3 +121,8 @@ button.icon-only {
 button.icon-only svg {
   display: block;
 }
+
+button.compact {
+  min-width: unset;
+  padding: 10px 10px;
+}
