--- a/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
+++ b/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
@@ -1,4 +1,6 @@
 .ta-drawer.ta-left-drawer {
+  background-color: var(--gray-50);
+  box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.12), 0 0 1px rgba(0, 0, 0, 0.3);
   flex-grow: 0;   
   flex-shrink: 0; 
   flex-basis: 0;
