--- a/src/pages/[lang]/projects/[project]/accept-invite.astro
+++ b/src/pages/[lang]/projects/[project]/accept-invite.astro
@@ -9,7 +9,7 @@ const lang = getLangFromUrl(Astro.url);
 
 const i18n = getTranslations(Astro.request, 'dashboard-projects');
 
-const supabase = await createSupabaseServerClient(Astro.cookies);
+const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 
 const projectId = Astro.params.project;
 
