--- a/src/components/AnnotationDesktop/DocumentMetadata/MetadataList.css
+++ b/src/components/AnnotationDesktop/DocumentMetadata/MetadataList.css
@@ -6,19 +6,12 @@ ul.metadata-list {
 
 ul.metadata-list > li {
   background-color: #FFFFFF;
-  display: flex;
-  justify-content: space-evenly;
   padding: 0.8em;
   margin-top: 8px;
   margin-bottom: 8px;
+  word-break: break-word;
 }
 
-ul.metadata-list > li > span {
-  display: flex;
-  width: 50%;
-}
-
-ul.metadata-list > li > span:last-child {
-  justify-content: flex-end;
-  text-align: right;
+ul.metadata-list > li > div:first-child {
+  color: var(--font-light)
 }
