--- a/src/components/MetadataModal/MetadataModal.css
+++ b/src/components/MetadataModal/MetadataModal.css
@@ -18,6 +18,14 @@
 
 .dialog-content.metadata-modal .meta > table > tbody > tr > td {
   padding: 0.5em 1em;
+  max-width: 200px;
+  white-space: normal;
+  word-break: break-word;
+}
+
+.dialog-content.metadata-modal .meta > table > tbody > tr > td > .metadata-actions {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .dialog-content.metadata-modal .meta > table > tbody > tr > td.empty {
