--- a/src/apps/project-home/AssignmentsView/AssignmentsView.css
+++ b/src/apps/project-home/AssignmentsView/AssignmentsView.css
@@ -6,9 +6,7 @@
 
 .project-assignments-document-header-bar {
   align-items: center;
-  box-shadow: 
-    0 0 3px -1px rgba(0, 0, 0, 0.9),
-    0 0 12px -4px rgba(0, 0, 0, 0.18);
+  box-shadow: 0 0 3px -1px rgba(0, 0, 0, 0.9), 0 0 12px -4px rgba(0, 0, 0, 0.18);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
