--- a/src/themes/default/alert-dialog/index.css
+++ b/src/themes/default/alert-dialog/index.css
@@ -61,13 +61,34 @@
   font-weight: 500;
   height: 35px;
   background-color: var(--red-200);
-  color: var(--red-11);
+  color: white;
 }
 .alert-dialog-button-red:hover {
   background-color: var(--red-200);
 }
 .alert-dialog-button-red:focus {
   box-shadow: 0 0 0 2px var(--red-500);
+}
+
+.alert-dialog-button-primary {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  padding: 0 15px;
+  font-size: 15px;
+  line-height: 1;
+  font-weight: 500;
+  height: 35px;
+  background-color: var(--button-primary-background);
+  color: white;
+}
+.alert-dialog-button-red:hover {
+  background-color: var(--button-primary-background);
+}
+.alert-dialog-button-red:focus {
+  box-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0.18),
+    0 0 3px 1px rgba(0, 0, 0, 0.12), 0 4px 12px -6px rgba(0, 0, 0, 0.25);
 }
 
 @keyframes overlayShow {
