--- a/src/pages/[lang]/sign-in.astro
+++ b/src/pages/[lang]/sign-in.astro
@@ -9,7 +9,7 @@ const methods = config.authentication.methods;
 ---
 
 <LoginLayout
-  title=''
+  title='Login'
   showLogo={config.branding.login_logo === ''
     ? methods.length < 4
     : methods.length < 3}
