--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -138,7 +138,7 @@
   --red-500-10: #da1e261a;
   --red-200: #f25158;
   --orange-500: #ffa929;
-  --green-500: #11a011;
+  --green-500: #0d870d;
 
   /** Global constants **/
   --border-radius: 3px;
@@ -146,7 +146,7 @@
 
   /** Font styles **/
   --font-dark: var(--gray-900);
-  --font-light: var(--gray-700);
+  --font-light: var(--gray-800);
   --font-semi: rgba(255, 255, 255, 0.65);
 
   --font-small: 0.875rem;
