--- a/src/apps/project-settings/ProjectSettings.css
+++ b/src/apps/project-settings/ProjectSettings.css
@@ -250,6 +250,7 @@
   border: 1px solid var(--gray-200);
   font-size: var(--font-small);
   margin-top: 20px;
+  max-width: 75ch;
   position: relative;
 }
 
