--- a/src/themes/default/accordion/index.css
+++ b/src/themes/default/accordion/index.css
@@ -3,13 +3,7 @@
 }
 
 .accordion-item {
-  background-color: var(--gray-50);
-  border: 1px solid var(--gray-200);
 	overflow: hidden;
-}
-
-.accordion-item + .accordion-item {
-  border-top: none;
 }
 
 .accordion-item:first-child {
@@ -24,36 +18,39 @@
 }
 
 .accordion-item:focus-within {
-  background-color: #fff; 
-
 	position: relative;
-	z-index: 2;
+	z-index: 1;
 }
 
 .accordion-header {
+  border-radius: 6px;
   display: flex;
+  z-index: 2;
+  position: relative;
   margin-block-start: 0 !important;
   margin-block-end: 0 !important;
 }
 
 .accordion-header[data-state='open'] {
 	border-bottom: 1px solid var(--gray-200);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
-.accordion-root button.accordion-trigger {
+button.accordion-trigger {
 	background-color: white;
 	font-family: inherit;
 	background-color: transparent;
 	padding: 0 20px;
 	height: 45px;
-	flex: 1;
+	flex-grow: 1;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	line-height: 1;
 }
 
-.accordion-root button.accordion-trigger:hover {
+button.accordion-trigger:hover {
 	background-color: var(--gray-2);
 }
 
