--- a/src/themes/default/dropdown/index.css
+++ b/src/themes/default/dropdown/index.css
@@ -86,6 +86,7 @@
   display: flex;
   flex-grow: 1;
   justify-content: flex-end;
+  padding-left: 0.25rem;
 }
 
 .right-slot svg {
@@ -100,7 +101,7 @@
   position: absolute;
 }
 
-.dropdown-divider {
+.dropdown-separator {
   border-top: 1px solid var(--gray-200);
   margin: 0.25rem 0.5rem;
 }
