--- a/src/apps/project-settings/GetPlugins/PluginGallery.css
+++ b/src/apps/project-settings/GetPlugins/PluginGallery.css
@@ -63,7 +63,18 @@
 
 .dialog-content.plugin-gallery .plugin-gallery-item .description {
   border-top: 1px solid var(--border-light-color);
-  padding: 10px;
+  padding: 0.5rem 0.5rem 0.25rem 0.5rem;
+}
+
+.dialog-content.plugin-gallery .plugin-gallery-item .description p {
+  display: -webkit-box;
+  line-height: 1.5rem;
+  height: 4.25rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .dialog-content.plugin-gallery .plugin-gallery-item .description h3 {
