Extension point tweaks

--- a/src/components/Annotation/TagList.css
+++ b/src/components/Annotation/TagList.css
@@ -9,6 +9,10 @@
   padding: 0 0 10px 0; 
 }
 
+.annotation .taglist-editor-wrapper {
+  display: flex;
+}
+
 .annotation .taglist button {
   height: auto;
 }
