Fixes the plugin admin CSS problem

--- a/src/pages/[lang]/projects/[project]/settings.astro
+++ b/src/pages/[lang]/projects/[project]/settings.astro
@@ -52,7 +52,7 @@ if (installedPlugins.error || !installedPlugins.data) {
 ---
 <BaseLayout title='Settings'>
   <ProjectSettings
-    client:load
+    client:only='react'
     i18n={i18n}
     project={project.data}
     invitations={invitations.data}
