--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -2,7 +2,11 @@
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { TagContextProvider } from '@components/TagContext';
 import { getLangFromUrl, getTranslations } from '@i18n';
-import { getMyProfile, listMyInvites } from '@backend/crud';
+import {
+  getMyProfile,
+  listMyInvites,
+  listMyNotifications,
+} from '@backend/crud';
 import { ProjectsHomeWrapper } from '@apps/dashboard-projects';
 import { listMyProjectsExtended } from '@backend/helpers';
 import BaseLayout from '@layouts/BaseLayout.astro';
@@ -20,9 +24,7 @@ if (me.error || !me.data) {
 
 const projects = await listMyProjectsExtended(supabase);
 
-const invitations = await listMyInvites(supabase);
-
-if (!projects.data || !invitations.data) {
+if (!projects.data) {
   const path = Astro.url.protocol + '//' + Astro.url.host;
   const error = await fetch(`${path}/500`);
   return new Response(error.body, { headers: error.headers, status: 500 });
@@ -35,7 +37,6 @@ if (!projects.data || !invitations.data) {
     client:only='react'
     me={me.data}
     projects={projects.data}
-    invitations={invitations.data}
     i18n={getTranslations(Astro.request, 'dashboard-projects')}
   />
 </BaseLayout>
