--- a/src/pages/[lang]/projects/[project]/index.astro
+++ b/src/pages/[lang]/projects/[project]/index.astro
@@ -3,6 +3,7 @@ import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import {
   getMyProfile,
   listMyInvites,
+  listMyNotifications,
   listPendingRequests,
 } from '@backend/crud';
 import {
@@ -66,8 +67,6 @@ if (documents.error) {
 
 const i18n = getTranslations(Astro.request, 'project-home');
 
-const invitations = await listMyInvites(supabase);
-
 const projects = await listMyProjectsExtended(supabase);
 
 const availableLayers = await getAvailableLayers(supabase, projectId as string);
@@ -94,7 +93,6 @@ if (installedPlugins.error || !installedPlugins.data) {
     requests={requests.data}
     documents={documents.data}
     user={profile.data}
-    invitations={invitations.data}
     availableLayers={availableLayers.data}
     plugins={PluginRegistry.resolvePlugins(installedPlugins.data)}
   />
