--- a/src/themes/default/popover/index.css
+++ b/src/themes/default/popover/index.css
@@ -3,12 +3,12 @@
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   background-color: #fff;
   border-radius: var(--border-radius);
-  box-shadow:
-    0 0 0 1px rgba(0, 0, 0, 0.12),
-    0 2px 12px -2px rgba(0, 0, 0, 0.12),
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12), 0 2px 12px -2px rgba(0, 0, 0, 0.12),
     0 8px 24px -4px rgba(0, 0, 0, 0.08);
   line-height: 160%;
   width: 320px;
+  max-height: 80vh;
+  overflow-y: scroll;
 }
 
 [data-radix-popper-content-wrapper] {
@@ -34,4 +34,3 @@
   stroke: #c6c6c6;
   z-index: -1;
 }
-
